# itolab_weekly_cpp

./: .gitignore  Readme.md  index.md
project/01_image_processing/: CMakeLists.txt  Readme.md
project/01_image_processing/src/: image_reader.cpp
week02/: CMakeLists.txt  Readme.md  main.cpp
week02/include/: timer.h
week03/: CMakeLists.txt  copy_demonstration.cpp  sales_item.h
week03/include/: sales_item.h
week03/src/: copy_demonstration.cpp
